[REPORT] added section Guida Utente on the report

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -435,26 +435,23 @@ Ho lavorato alla parte Model e ho collaborato al Controller. Purtroppo non ho av
 \appendix
 \chapter{Guida utente}
 
-Capitolo in cui si spiega come utilizzare il software. Nel caso in cui il suo uso sia del tutto
-banale, tale capitolo può essere omesso.
-%
-A tal riguardo, si fa presente agli studenti che i docenti non hanno mai utilizzato il software
-prima, per cui aspetti che sembrano del tutto banali a chi ha sviluppato l'applicazione possono non
-esserlo per chi la usa per la prima volta.
-%
-Se, ad esempio, per cominciare una partita con un videogioco è necessario premere la barra
-spaziatrice, o il tasto ``P'', è necessario che gli studenti lo segnalino.
-
-\subsection*{Elementi positivi}
-
+Quando viene fatto partire l'applicativo ci si ritroverà in una scena con due bottoni:
 \begin{itemize}
- \item Si istruisce in modo semplice l'utente sull'uso dell'applicazione, eventualmente facendo uso di schermate e descrizioni.
+    \item \textbf{Single Player}: Versione del gioco in cui il giocatore è solo contro le ondate di nemici.
+    \item \textbf{With Companion}: Versione del gioco semplificata in cui il giocatore è aiutato da un Companion (una semplice IA, che attacca i nemici) 
 \end{itemize}
 
-\subsection*{Elementi negativi}
+I comandi di gioco sono i seguenti:
 \begin{itemize}
- \item Si descrivono in modo eccessivamente minuzioso tutte le caratteristiche, anche minori, del software in oggetto.
- \item Manca una descrizione che consenta ad un utente qualunque di utilizzare almeno le funzionalità primarie dell'applicativo.
+    \item \textbf{ESC} (Escape): chiude l'applicazione
+    \item \textbf{W}: Movimento verso l'alto.
+    \item \textbf{A}: Movimento verso sinistra.
+    \item \textbf{S}: Movimento verso il basso.
+    \item \textbf{D}: movimento verso destra
+    \item \textbf{↑} (Up Arrow): sparo verso l'alto.
+    \item \textbf{↓} (Down Arrow): sparo verso il basso.
+    \item \textbf{←} (Left Arrow): sparo verso sinistra.
+    \item \textbf{→}(Right Arrow): sparo verso destra.
 \end{itemize}
 
 \bibliographystyle{alpha}
