[REPORT] Added Detailed Design

--- a/report/13-template.tex
+++ b/report/13-template.tex
@@ -326,6 +326,87 @@ Ho capito quindi che sarebbe servito un pattern che creasse i diversi tipi di Wa
 
 \paragraph{Soluzione} Dato che il nostro gioco doveva avere la possibilità di creare diversi tipi di PowerUp ognuno con comportamenti diversi ho deciso di utilizzare il \textit{Factory pattern} per sostituire la costruzione diretta dei PowerUp con delle appropriate chiamate alla \textit{Factory}. L'utilizzo del \textit{Factory method pattern} si è portato dietro un altro vantaggio la possibilità di aggiungere facilmente nuovi PowerUp.
 Per risolvere il problema dei diversi comportamenti ho invece usato il pattern Strategy direttamente dentro la \textit{Factory} mediante il suo metodo privato \texttt{fromFunction()}.
+
+\subsection*{Magnani Leonardo David Matteo}
+
+\subsubsection{Getione delle entità}
+
+\begin{figure}[H]
+\centering{}
+\includegraphics[width=.3\textwidth]{img/EntityComponentUML}
+\caption{Rappresentazione UML dell'applicazione del Component Pattern alla enttità}
+\end{figure}
+
+\paragraph{Problema} La classe \texttt{Entity} copre più domini rompendo il \textit{Single Responsability Principle}.
+Inoltre l'interfaccia \texttt{Entity} potrebbe avere numerose implementazioni in base al comportamento che li si vuole dare.
+L'utilizzare la ereditarietà comporterebbe la creazione di molte sottoclassi con la conseguenza di ripetizione di codice.
+Inoltre utilizzare l'ereditarietà multipla potrebbe portare numerosi problemi, come Deadly Diamond.
+
+\paragraph{Soluzione} Il \textit{Component pattern} permette di creare dei componenti altamente riusabili e indipendenti.
+Utilizzando il \textit{Component pattern}, quindi favorendo la composizione rispetto alla ereditarietà, si riesce a scaltare
+molto velocementerent sul numero di entità.
+Per descrivere il comportamento generale dell'entità li si vengono assegnati i componenti desiderati.
+Dividendo il dominio e assegnando un dominio specifico ad un specifico componente viene rispettato il \textit{Single Responsability Principle}.
+Questo comporta un migliore manutenibilità dovuta all'assenza di ripetizione di codice.\\
+NOTA: La progettazione alla soluzione del problema è stata fatta in collaborazione con Cecchini Andrea.
+
+\subsubsection{Comunicazione tra le componenti dell'entità}
+
+\begin{figure}[H]
+\centering{}
+\includegraphics[width=\textwidth]{img/ComponentCommunicationUML}
+\caption{Rappresentazione UML dell'applicazione del Mediator pattern per la comunicazione tra le componenti}
+\end{figure}
+
+\paragraph{Problema} I componenti hanno bisogno di comunicare tra di loro. Nel progetto:
+\begin{itemize}
+	\item InputComponent deve notificare il movimento da effettuare al PhysicsComponent.
+	\item PhysicsComponent deve notificare il CollisionComponent della nuova posizione dopo il movimento.
+	\item CollisionComponent deve notificare HealthComponent per indicare il danno ricevuto dalla collisione.
+\end{itemize}
+\paragraph{Soluzione} Il \textit{Mediator Pattern} è un modo efficace di gestire la comunicazione tra componenti
+all'interno di un'entità. Utilizzando tale pattern, ciascun componente può inviare messaggi a un altro componente 
+tramite la sua entità/mediatore. Ogni componente ha una referenza alla sua entità, consentendogli di inviare messaggi
+a un componente specifico utilizzando il metodo \texttt{notifyComponent()}. Una volta ricevuto il messaggio, l'entità 
+si occupa di passarlo al componente desiderato tramite il metodo \texttt{receive()}, consentendo così al componente ricevente 
+di decidere come gestire il messaggio. Questo pattern offre la versatilità necessaria per gestire la comunicazione tra componenti 
+in modo efficace e affidabile. \\
+NOTA: La progettazione alla soluzione del problema è stata fatta in collaborazione con Cecchini Andrea.
+
+\subsubsection{Creazione di collisioni con comportamenti diversi}
+
+\begin{figure}[H]
+\centering{}
+\includegraphics[width=\textwidth]{img/CollisionComponentUML}
+\caption{Rappresentazione UML dell'applicazione del Template Method per la gestione di CollisionComponent con comportamenti diversi}
+\end{figure}
+	
+\paragraph{Problema} Alcune entità devono agire in modo diverso in caso di collisione. Nel progetto, 
+alcune entità perdono la vita in base al danno causato dalla collisione, mentre altre (i proiettili) si distruggono all'impatto.
+\paragraph{Soluzione} Per gestire diverse entità che devono comportarsi in modo diverso in caso di collisione, nel progetto è 
+stato utilizzato il \textit{Template Method pattern}. Il metodo template è \texttt{update()}, che chiama un metodo astratto \texttt{collisionAction()} 
+per gestire il comportamento che l'entità deve prendere in caso di collisione, e un metodo protetto \texttt{knockback()} che gestisce il 
+comportamento della collisione con entità rigide. In questo modo, si è creato un modo riutilizzabile e flessibile per gestire le 
+collisioni tra entità che devono agire in modo diverso. \\
+Il metodo \texttt{knockback()} anche se non utilizzato nell’implementazioni è stato messo per futura estendibilità.
+
+\subsubsection{Creazione delle entità}
+
+\begin{figure}[H]
+\centering{}
+\includegraphics[width=\textwidth]{img/EntityFactoryUML.pdf}
+\caption{Rappresentazione UML dell'applicazione del Factory Method per la creazione di diversi tipi di entità, 
+\\NOTA: sono mostrate solo tre funzioni nella factory per rapprestazione}
+\end{figure}
+	
+\paragraph{Problema} Ci possono essere più entità con componenti diversi e quindi comportamenti diversi.
+\paragraph{Soluzione} Per la creazione di entità è stato utilizzato il \textit{Factory Method pattern}, è un modo semplice e flessibile 
+per creare entità con componenti diversi e quindi comportamenti diversi. Ad esempio, una factory può creare un'entità che ha una 
+fisica e collisione, oppure un’entità che abbia solo una collisione (come il muro di gioco). Una factory crea una superficie di 
+abstracation per la creazione delle entità e nasconde la loro logica di implementazione. Tramite questo pattern, un codice chiamante può 
+passare dei parametri specifici e ricevere un'istanza di un'entità pre-configurata. Questo significa che non è necessario scrivere il codice 
+di creazione di un'entità in più posti, ma basta creare una factory una volta e passare i parametri a seconda dei casi d'uso.
+
 \subsubsection{Riuso del codice delle personalità}
 
 \begin{figure}[H]
